[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/weapon/shuriken/shuriken.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapon/shuriken/shuriken.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Shuriken" type="Node2D"]
script = ExtResource( 2 )

[node name="SpinningBase" type="Node2D" parent="."]
visible = false

[node name="SpinningNode" type="Node2D" parent="SpinningBase"]
position = Vector2( 50, 0 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SpinningBase/SpinningNode"]
remote_path = NodePath("../../../Sprite")
update_rotation = false
update_scale = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 50, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite" groups=["weapon"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
